--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>CS 416 Data Visualization: Narrative Visualization Project</title>
+</head>
+<body>
+
+</body>
+</html>
