WIP changing computers

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
+<script src="./visualization.js"></script>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>CS 416 Data Visualization: Narrative Visualization Project</title>
 </head>
-<body>
-
+<body onload='init()'>
+    <svg width=1500 height=700 x=10 y=10></svg>
+    <script>
+    </script>
 </body>
 </html>
