--- a/index.html
+++ b/index.html
@@ -4,67 +4,109 @@
     <meta charset="UTF-8">
     <title>CS 416 Data Visualization: Narrative Visualization Project</title>
 </head>
-<body onload="init()">
+<body onload="init()" style="font-family: Verdana">
 <svg width=1500 height=1000></svg>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
 <script>
-    const canvas = d3.select('svg');
-    canvas.append('image')
+    const TITLE = "Data-Driven Olympics";
+    const SUBTITLE = "Exploring Olympic medal count by year, IOC nation, and event category";
+
+    const svg = d3.select('svg');
+    svg.append('image')
         .attr('xlink:href', "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Olympic_rings_without_rims.svg/2560px-Olympic_rings_without_rims.svg.png")
         .attr('width', 200)
         .attr('height', 80)
         .attr('y', 10);
-    canvas.append('text')
+    svg.append('text')
         .attr('x', 220)
         .attr('y', 50)
         .attr('stroke', 'blue')
         .attr('fill', 'orange')
+        .style('font-family', 'Garamond')
+        .style('font-variant', 'small-caps')
         .style('font-size', 50)
-        .text("Data-Driven Olympics");
-    canvas.append('text')
+        .text(TITLE);
+    svg.append('text')
         .attr('x', 220)
-        .attr('y', 85)
+        .attr('y', 82)
         .attr('fill', 'blue')
-        .style('font-size', 24)
-        .text("Exploring Olympic medal count by year, IOC nation, and event category");
-    canvas.append('path')
+        .style('font-size', 20)
+        .text(SUBTITLE);
+    svg.append('path')
         .attr('d', d3.line()([[10, 100], [1490, 100]]))
         .attr('stroke', 'black');
 
-    const X_SCALE = d3.scaleLinear().domain([1880, 2010]).range([0, 1380]);
-    const Y_SCALE = d3.scaleLinear().domain([0, 500]).range([900, 100]);
+    const X_SCALE = d3.scaleLinear().domain([1880, 2020]).range([0, 1380]);
+    const X_SCALE_BAND = d3.scaleBand().range([0, 1380]).padding(0.4);
+    const Y_SCALE = d3.scaleLinear().domain([0, 2200]).range([900, 100]);
 
-    const SUMMER_DATA = d3.csv("https://armhoeft.github.io/data/summer.csv");
-    const WINTER_DATA = d3.csv("https://armhoeft.github.io/data/winter.csv");
+    // const SUMMER_DATA = d3.csv("https://armhoeft.github.io/data/summer.csv");
+    // const WINTER_DATA = d3.csv("https://armhoeft.github.io/data/winter.csv");
 
     async function displayMedalsByYear() {
-        const chart = d3.select('#chart-area');
-        chart.data(SUMMER_DATA).enter()
-        .append('rect')
-        .attr('class', 'bar')
-        .attr('x', function(d, i) { return X_SCALE})
+        let yearToMedals = {};
+        await d3.csv("https://armhoeft.github.io/data/summer.csv", function (d) {
+            const k = d.Year;
+            console.log(k);
+            yearToMedals[k] || (yearToMedals[k] = {year: k, yearAligned: parseInt(k) + 6.625, count: 0});
+            yearToMedals[k].count++;
+        });
+
+        X_SCALE_BAND.domain(d3.values(yearToMedals).map(function (d) {
+            return d.yearAligned;
+        }));
+        d3.select('svg').selectAll(".bar")
+            .data(d3.values(yearToMedals))
+            .enter()
+            .append("rect")
+            .attr("class", "bar")
+            .attr("id", function (d, i) {
+                return i;
+            })
+            .attr("x", function (d, i) {
+                return X_SCALE(d.yearAligned);
+            })
+            .attr("y", function (d, i) {
+                return Y_SCALE(d.count);
+            })
+            .attr("width", X_SCALE_BAND.bandwidth)
+            .attr("height", function (d, i) {
+                return 930 - Y_SCALE(d.count);
+            })
+            .attr('fill', '#777777');
+        console.log('Done');
     }
 
     async function init() {
         const xAxis = d3.axisBottom(X_SCALE)
-            .tickValues([1880, 1890, 1900, 1910, 1920, 1930, 1940, 1950, 1960, 1970, 1980, 1990, 2000, 2010])
+            .tickValues([1880, 1890, 1900, 1910, 1920, 1930, 1940, 1950, 1960, 1970, 1980, 1990, 2000, 2010, 2020])
             .tickFormat(d3.format("~y"));
 
         const yAxis = d3.axisLeft(Y_SCALE)
-            .tickValues([0, 50, 100, 150, 200, 250, 300, 350, 400, 450, 500])
+            .tickValues([0, 200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000, 2200])
             .tickFormat(d3.format("~s"));
 
-        // Create display canvas
-        const canvas = d3.select('svg').append('g')
+        // Create canvas
+        const canvas = svg.append('g')
             .attr('id', 'canvas')
             .attr('transform', 'translate(80,30)');
-        // Display Axes
+
+        // Display chart-area
         canvas.append('g')
-            .call(yAxis);
+            .attr('id', 'chart-area')
+            .append('rect')
+            .attr('transform', 'translate(1,100)')
+            .attr('fill', '#F8F8F8')
+            .attr('width', 1380)
+            .attr('height', 800);
+
+        // Display Axes
         canvas.append('g')
             .attr('transform', "translate(0,900)")
             .call(xAxis)
+        canvas.append('g')
+            .call(yAxis);
         canvas.append('text')
             .attr('x', -550)
             .attr('y', -40)
@@ -72,12 +114,6 @@
             .attr('fill', 'black')
             .style('font-size', 16)
             .text("Medal Count");
-        canvas.append('rect')
-            .attr('id', 'chart-area')
-            .attr('transform', 'translate(1,100)')
-            .attr('fill', '#F8F8F8')
-            .attr('width', 1380)
-            .attr('height', 800);
 
         await displayMedalsByYear();
     }
