--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         font-family: Verdana;
     }
 
-    .heading {
+    rect.heading {
         width: 1500px;
         height: 100px;
         fill: #EAECEE;
+        border-bottom: 1px solid #34495E;
     }
 
     .heading-title {
@@ -37,11 +38,15 @@
         height: 80px;
     }
 
-    .bar {
-        fill: #34495E;
+    .chart-area {
+        fill: #EBEDEF;
     }
 
-    div.bar-tooltip {
+    .bar {
+        fill: #21618C;
+    }
+
+    div.tooltip {
         position: absolute;
         padding: 0.5rem;
         background: #EAECEE;
@@ -50,9 +55,10 @@
         border-radius: 4px;
         pointer-events: none;
         font-size: small;
+        visibility: hidden;
     }
 
-    div.bar-tooltip-header {
+    div.tooltip-header {
         font-size: medium;
         color: #D35400;
         text-align: center;
@@ -62,166 +68,373 @@
         margin-bottom: 5px;
     }
 
-    div.bar-tooltip-content {
+    div.tooltip-content {
         text-align: justify;
         font-weight: normal;
         white-space: pre-wrap;
     }
 
-    div.bar-tooltip-footer {
+    div.tooltip-footer {
         text-align: justify;
         font-weight: normal;
         margin-top: 10px;
     }
+
+    svg.tooltip-icon-medal {
+        width: 10px;
+        height: 10px;
+        padding-right: 5px;
+    }
+
+    .axis-label-slant {
+        text-anchor: end;
+    }
 </style>
 <body onload="init()">
-<svg width=1500 height=1000></svg>
+<div>
+    <svg id='page-title' width=1500 height=100></svg>
+</div>
+<div>
+    <svg id='primary-canvas' width=1500 height=700></svg>
+    <div id='primary-tooltip' class='tooltip'></div>
+</div>
+<div>
+    <svg id='secondary-canvas' width=1000 height=500></svg>
+    <svg id='tertiary-canvas' width=500 height=500></svg>
+    <div id='secondary-tooltip' class='tooltip'></div>
+    <div id='tertiary-tooltip' class='tooltip'></div>
+</div>
 <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
 <script>
-    const TITLE = "Data-Driven Olympics";
-    const SUBTITLE = "Exploring Summer Olympic Games medal count by year, IOC nation, and event category";
 
-    const svg = d3.select('svg');
-    svg.append('rect')
-        .attr('class', 'heading');
-    svg.append('image')
-        .attr('class', 'heading-img')
-        .attr('xlink:href', "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Olympic_rings_without_rims.svg/2560px-Olympic_rings_without_rims.svg.png")
-        .attr('y', 10);
-    svg.append('text')
-        .attr('class', 'heading-title')
-        .attr('x', 220)
-        .attr('y', 50)
-        .text(TITLE);
-    svg.append('text')
-        .attr('class', 'heading-subtitle')
-        .attr('x', 220)
-        .attr('y', 82)
-        .text(SUBTITLE);
-    svg.append('path')
-        .attr('d', d3.line()([[0, 100], [1500, 100]]))
-        .attr('stroke', 'black');
+    const X1_SCALE = d3.scaleLinear().domain([1880, 2020]).range([0, 1380]);
+    const X1_SCALE_BAND = d3.scaleBand().range([0, 1380]).padding(0.4);
+    const Y1_SCALE = d3.scaleLinear().domain([0, 2200]).range([600, 0]);
 
-    const X_SCALE = d3.scaleLinear().domain([1880, 2020]).range([0, 1380]);
-    const X_SCALE_BAND = d3.scaleBand().range([0, 1380]).padding(0.4);
-    const Y_SCALE = d3.scaleLinear().domain([0, 2200]).range([900, 100]);
+    async function displayPageHeader() {
+        const TITLE = "Data-Driven Olympics";
+        const SUBTITLE = "Exploring Summer Olympic Games from 1896 to 2012";
 
-    async function displayMedalsByYear() {
-        let yearToMedals = {};
+        const header = d3.select('#page-title');
+        header.append('rect')
+            .attr('class', 'heading');
+        header.append('image')
+            .attr('class', 'heading-img')
+            .attr('xlink:href', "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Olympic_rings_without_rims.svg/2560px-Olympic_rings_without_rims.svg.png")
+            .attr('y', 10);
+        header.append('text')
+            .attr('class', 'heading-title')
+            .attr('x', 220)
+            .attr('y', 50)
+            .text(TITLE);
+        header.append('text')
+            .attr('class', 'heading-subtitle')
+            .attr('x', 220)
+            .attr('y', 82)
+            .text(SUBTITLE);
+        header.append('path')
+            .attr('d', d3.line()([[0, 98], [1500, 98]]))
+            .attr('stroke', 'black');
+        header.append('path')
+            .attr('d', d3.line()([[0, 100], [1500, 100]]))
+            .attr('stroke', 'gray');
+    }
+
+    async function getApplicationData() {
+        const data = {};
         await d3.csv("https://armhoeft.github.io/data/summer.csv", function (d) {
             const k = d.Year;
-            console.log(k);
-            if (!yearToMedals[k]) {
-                yearToMedals[k] = {
+            const c = d.Country;
+
+            const thisEntry = {
+                sport: d.Sport,
+                discipline: d.Discipline,
+                athlete: d.Athlete,
+                gender: d.Gender,
+                country: d.Country,
+                event: d.Event,
+                medal: d.Medal
+            };
+
+            if (!data[k]) {
+                data[k] = {
                     year: k,
-                    yearAligned: parseInt(k) + 6.625,
+                    yearAligned: parseInt(k) - 1.5,
                     city: d.City,
-                    count: 0
+                    count: 0,
+                    all: [],
+                    byCountry: {}
                 };
             }
-            yearToMedals[k].count++;
+            data[k].count++;
+            data[k].all.push(thisEntry);
+            data[k].byCountry || (data[k].byCountry = {});
+            data[k].byCountry[c] || (data[k].byCountry[c] = {
+                count: 0,
+                countByType: {
+                    gold: 0,
+                    silver: 0,
+                    bronze: 0
+                },
+                countGold: 0,
+                countSilver: 0,
+                countBronze: 0,
+                country: d.Country,
+                medals: []
+            });
+            data[k].byCountry[c].count++;
+            data[k].byCountry[c].countByType[thisEntry.medal.toLowerCase()]++;
+            data[k].byCountry[c].medals.push(thisEntry);
         });
+        return data;
+    }
 
-        X_SCALE_BAND.domain(d3.values(yearToMedals).map(function (d) {
+    async function displayPrimaryChartCanvas() {
+        // Create canvas
+        const canvas = d3.select('#primary-canvas')
+            .append('g')
+            .attr('id', 'primary-chart')
+            .attr('transform', 'translate(80,30)');
+
+        // Display chart-area
+        canvas.append('g')
+            .attr('id', 'primary-chart-area')
+            .append('rect')
+            .attr('class', 'chart-area')
+            .attr('width', 1380)
+            .attr('height', 600);
+
+        const xAxis = d3.axisBottom(X1_SCALE)
+            .tickValues([1880, 1890, 1900, 1910, 1920, 1930, 1940, 1950, 1960, 1970, 1980, 1990, 2000, 2010, 2020])
+            .tickFormat(d3.format("~y"));
+        const yAxis = d3.axisLeft(Y1_SCALE)
+            .tickValues([0, 200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000, 2200])
+            .tickFormat(d3.format("~s"));
+
+        // Display Axes
+        canvas.append('g')
+            .attr('transform', "translate(0,600)")
+            .call(xAxis)
+        canvas.append('g')
+            .call(yAxis);
+        canvas.append('text')
+            .attr('x', -350)
+            .attr('y', -40)
+            .attr('transform', 'rotate(-90)')
+            .attr('fill', 'black')
+            .style('font-size', 16)
+            .text("Total Medal Count");
+    }
+
+    async function displayPrimaryChartTooltipContent(d, i) {
+        d3.select('#primary-tooltip').html('')
+            .style('left', (d3.event.pageX + 20) + "px")
+            .style('top', (d3.event.pageY - 50) + "px")
+            .append('div')
+            .attr('class', 'tooltip-header')
+            .text(d.year);
+
+        const tooltipContent = d3.select('#primary-tooltip')
+            .append('div')
+            .attr('class', 'tooltip-content');
+        tooltipContent.append('div').text('Host City:\t\t' + d.city);
+        tooltipContent.append('div').text('Total Medals:\t' + d.count);
+
+        d3.select('#primary-tooltip').append('div')
+            .attr('class', 'tooltip-footer')
+            .text('Click for details');
+    }
+
+    async function displayPrimaryChart(chartData) {
+
+        X1_SCALE_BAND.domain(d3.values(chartData).map(function (d) {
             return d.yearAligned;
         }));
 
-        let tooltip = d3.select('body').append('div')
-            .attr('class', 'bar-tooltip');
-        d3.select('svg').selectAll(".bar")
-            .data(d3.values(yearToMedals))
+        await displayPrimaryChartCanvas();
+
+        // Populate primary chart data
+        d3.select('#primary-chart-area').selectAll(".bar")
+            .data(d3.values(chartData))
             .enter()
             .append("rect")
             .attr("class", "bar")
-            .attr("id", function (d, i) {
-                return i;
-            })
             .attr("x", function (d, i) {
-                return X_SCALE(d.yearAligned);
+                return X1_SCALE(d.yearAligned);
             })
             .attr("y", function (d, i) {
-                return Y_SCALE(d.count);
+                return Y1_SCALE(d.count);
             })
-            .attr("width", X_SCALE_BAND.bandwidth)
+            .attr("width", X1_SCALE_BAND.bandwidth)
             .attr("height", function (d, i) {
-                return 930 - Y_SCALE(d.count);
+                return 600 - Y1_SCALE(d.count);
             })
             .on('mouseover', function (d, i) {
                 d3.select(this).transition()
                     .duration(50)
                     .attr('opacity', 0.5);
-                tooltip.transition()
+                d3.select('#primary-tooltip').transition()
                     .duration(50)
                     .style('visibility', 'visible');
 
-                tooltip.html('')
-                    .style('left', (d3.event.pageX + 20) + "px")
-                    .style('top', (d3.event.pageY - 15) + "px")
-                    .append('div')
-                    .attr('class', 'bar-tooltip-header')
-                    .text(d.year);
-
-                const tooltipContent = tooltip.append('div').attr('class', 'bar-tooltip-content');
-                tooltipContent.append('div').text('Host City:\t\t' + d.city);
-                tooltipContent.append('div').text('Medal Count:\t' + d.count);
-
-                tooltip.append('div')
-                    .attr('class', 'bar-tooltip-footer')
-                    .text('Click for details');
+                displayPrimaryChartTooltipContent(d, i);
             })
             .on('mouseout', function (d, i) {
                 d3.select(this).transition()
                     .duration(50)
                     .attr('opacity', 1);
-                tooltip.transition()
+                d3.select('#primary-tooltip').transition()
                     .duration(1000)
                     .style('visibility', 'hidden');
             })
-            .on('click', function (d, i) {
-                console.log('Clicked it!')
-            });
-        console.log('Done');
+            .on('click', displaySecondaryChartContent);
     }
 
-    async function init() {
-        const xAxis = d3.axisBottom(X_SCALE)
-            .tickValues([1880, 1890, 1900, 1910, 1920, 1930, 1940, 1950, 1960, 1970, 1980, 1990, 2000, 2010, 2020])
-            .tickFormat(d3.format("~y"));
-
-        const yAxis = d3.axisLeft(Y_SCALE)
-            .tickValues([0, 200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000, 2200])
-            .tickFormat(d3.format("~s"));
-
+    async function resetSecondaryChartCanvas(data, xScale, yScale) {
         // Create canvas
-        const canvas = svg.append('g')
-            .attr('id', 'canvas')
+        const canvas = d3.select('#secondary-canvas')
+            .html('')
+            .append('g')
+            .attr('id', 'secondary-chart')
             .attr('transform', 'translate(80,30)');
 
         // Display chart-area
         canvas.append('g')
-            .attr('id', 'chart-area')
+            .attr('id', 'secondary-chart-area')
             .append('rect')
-            .attr('transform', 'translate(1,100)')
-            .attr('fill', '#EBEDEF')
-            .attr('width', 1380)
-            .attr('height', 800);
+            .attr('class', 'chart-area')
+            .attr('y', -1)
+            .attr('width', 880)
+            .attr('height', 401);
+
+        const xAxis = d3.axisBottom(xScale);
+        const yAxis = d3.axisLeft(yScale).tickFormat(d3.format("~s"));
 
         // Display Axes
         canvas.append('g')
-            .attr('transform', "translate(0,900)")
+            .attr('transform', "translate(0,400)")
             .call(xAxis)
+            .selectAll('text')
+            .attr('class', 'axis-label-slant')
+            .attr('dx', '-10px')
+            .attr('dy', '-5px')
+            .attr('transform', 'rotate(-90)');
         canvas.append('g')
             .call(yAxis);
         canvas.append('text')
-            .attr('x', -550)
+            .attr('x', -300)
             .attr('y', -40)
             .attr('transform', 'rotate(-90)')
             .attr('fill', 'black')
             .style('font-size', 16)
-            .text("Medal Count");
+            .text("Medal Count by Country");
+    }
 
-        await displayMedalsByYear();
+    async function displaySecondaryChart(data, ind) {
+        await displaySecondaryChartContent(data, ind);
+    }
+
+    async function displaySecondaryChartContent(selectedData, selectedInd) {
+
+        const allCounts = (selectedData && d3.values(selectedData.byCountry).map(d => d.count)) || [0, 0];
+        const xScale = d3.scaleBand()
+            .domain((selectedData && d3.keys(selectedData.byCountry).sort()) || [])
+            .range([0, 880])
+            .padding(0.4);
+        const yScale = d3.scaleLog()
+            .domain([Math.min(...allCounts), Math.max(...allCounts)])
+            .range([400, 0]);
+
+        await resetSecondaryChartCanvas(selectedData, xScale, yScale);
+
+        if (!selectedData)
+            return;
+
+        // Populate secondary chart data
+        d3.select('#secondary-chart-area').selectAll('.bar')
+            .data(d3.values(selectedData.byCountry))
+            .enter()
+            .append('rect')
+            .attr('class', 'bar')
+            .attr('x', d => xScale(d.country))
+            .attr("y", d => yScale(d.count))
+            .attr("width", xScale.bandwidth)
+            .attr("height", d => 400 - yScale(d.count))
+            .on('mouseover', function (d, i) {
+                d3.select(this).transition()
+                    .duration(50)
+                    .attr('opacity', 0.5);
+                d3.select('#secondary-tooltip').transition()
+                    .duration(50)
+                    .style('visibility', 'visible');
+
+                displaySecondaryChartTooltipContent(d, i);
+            })
+            .on('mouseout', function (d, i) {
+                d3.select(this).transition()
+                    .duration(50)
+                    .attr('opacity', 1);
+                d3.select('#secondary-tooltip').transition()
+                    .duration(1000)
+                    .style('visibility', 'hidden');
+            })
+            // .on('click', displaySecondaryChartContent);
+    }
+
+    async function displaySecondaryChartTooltipContent(d, i) {
+        d3.select('#secondary-tooltip').html('')
+            .style('left', (d3.event.pageX + 20) + "px")
+            .style('top', (d3.event.pageY - 75) + "px")
+            .append('div')
+            .attr('class', 'tooltip-header')
+            .text(d.country);
+
+        const tooltipContent = d3.select('#secondary-tooltip')
+            .append('div')
+            .attr('class', 'tooltip-content');
+        tooltipContent.append('div').text('Overall Medal Count:\t' + d.count);
+        const goldDiv = tooltipContent.append('div');
+        goldDiv.append('svg').attr('class', 'tooltip-icon-medal')
+            .append('circle')
+            .attr('cx', 5)
+            .attr('cy', 5)
+            .attr('r', 5)
+            .style('fill', 'gold');
+
+        const silverDiv = tooltipContent.append('div');
+        silverDiv.append('svg').attr('class', 'tooltip-icon-medal')
+            .append('circle')
+            .attr('cx', 5)
+            .attr('cy', 5)
+            .attr('r', 5)
+            .style('fill', 'silver');
+
+        const bronzeDiv = tooltipContent.append('div');
+        bronzeDiv.append('svg').attr('class', 'tooltip-icon-medal')
+            .append('circle')
+            .attr('cx', 5)
+            .attr('cy', 5)
+            .attr('r', 5)
+            .style('fill', '#A1887F');
+
+        goldDiv.append('text')
+            .text('Gold Medals:\t\t' + d.countByType.gold);
+        silverDiv.append('text')
+            .text('Silver Medals:\t\t' + d.countByType.silver);
+        bronzeDiv.append('text')
+            .text('Bronze Medals:\t' + d.countByType.bronze);
+
+        d3.select('#secondary-tooltip').append('div')
+            .attr('class', 'tooltip-footer')
+            .text('Click for more details');
+    }
+
+    async function init() {
+        await displayPageHeader();
+
+        const chartData = await getApplicationData();
+        await displayPrimaryChart(chartData);
+        await displaySecondaryChart();
     }
 </script>
 </body>
