--- a/index.html
+++ b/index.html
@@ -95,12 +95,27 @@
     <svg id='page-title' width=1500 height=100></svg>
 </div>
 <div>
-    <svg id='primary-canvas' width=1500 height=700></svg>
+    <div id='description' class='description' style='width:1500px;height:160px;text-align: justify'>
+        While the 2021 Summer Olympic Games are proceeding in Japan, it's a good time to reflect on the history of the
+        games and consider this year's medal count in context.
+        <br><br>
+        This visualization will allow you to interact with medal count data over time and get an understanding of the
+        event categories where specific countries have performed well. A cursory examination shows how the decline of
+        imperialism and rise of globalization in the early 20th century led to a more diverse involvement in the Games
+        by a broader array of nation states. In many regards, the concentration of medal count around dominant countries
+        (GER, then URS, then USA, and recently CHN) aligns with the international prowess and influence of each
+        respective country. At the same time, the dominance of these countries perpetuates the global imbalance between
+        the "haves" and the "have nots". Though it's reasonable to assume that the rising tide of access to high
+        technology and transportation in second- and third-world countries will raise all boats, it seems inevitable
+        that nations like the United States, China, and Russia will continue to invest heavily in athletes to showcase
+        their supposed cultural superiority on an international stage.
+    </div>
+    <svg id='primary-canvas' width=1500 height=480></svg>
     <div id='primary-tooltip' class='tooltip'></div>
 </div>
 <div>
-    <svg id='secondary-canvas' width=1000 height=500></svg>
-    <svg id='tertiary-canvas' width=500 height=500></svg>
+    <svg id='secondary-canvas' width=1000 height=550></svg>
+    <svg id='tertiary-canvas' width=500 height=550></svg>
     <div id='secondary-tooltip' class='tooltip'></div>
     <div id='tertiary-tooltip' class='tooltip'></div>
 </div>
@@ -109,10 +124,10 @@
 
     const X1_SCALE = d3.scaleLinear().domain([1880, 2020]).range([0, 1380]);
     const X1_SCALE_BAND = d3.scaleBand().range([0, 1380]).padding(0.4);
-    const Y1_SCALE = d3.scaleLinear().domain([0, 2200]).range([600, 0]);
+    const Y1_SCALE = d3.scaleLinear().domain([0, 2200]).range([400, 0]);
 
     async function displayPageHeader() {
-        const TITLE = "Data-Driven Olympics";
+        const TITLE = "Olympic Medal Counts over Time";
         const SUBTITLE = "Exploring Summer Olympic Games from 1896 to 2012";
 
         const header = d3.select('#page-title');
@@ -133,10 +148,10 @@
             .attr('y', 82)
             .text(SUBTITLE);
         header.append('path')
-            .attr('d', d3.line()([[0, 98], [1500, 98]]))
+            .attr('d', d3.line()([[0, 98], [1800, 98]]))
             .attr('stroke', 'black');
         header.append('path')
-            .attr('d', d3.line()([[0, 100], [1500, 100]]))
+            .attr('d', d3.line()([[0, 100], [1800, 100]]))
             .attr('stroke', 'gray');
     }
 
@@ -213,7 +228,7 @@
             .append('rect')
             .attr('class', 'chart-area')
             .attr('width', 1380)
-            .attr('height', 600);
+            .attr('height', 400);
 
         const xAxis = d3.axisBottom(X1_SCALE)
             .tickValues([1880, 1890, 1900, 1910, 1920, 1930, 1940, 1950, 1960, 1970, 1980, 1990, 2000, 2010, 2020])
@@ -224,12 +239,12 @@
 
         // Display Axes
         canvas.append('g')
-            .attr('transform', "translate(0,600)")
+            .attr('transform', "translate(0,400)")
             .call(xAxis)
         canvas.append('g')
             .call(yAxis);
         canvas.append('text')
-            .attr('x', -350)
+            .attr('x', -250)
             .attr('y', -40)
             .attr('transform', 'rotate(-90)')
             .attr('fill', 'black')
@@ -278,7 +293,7 @@
             })
             .attr("width", X1_SCALE_BAND.bandwidth)
             .attr("height", function (d, i) {
-                return 600 - Y1_SCALE(d.count);
+                return 400 - Y1_SCALE(d.count);
             })
             .on('mouseover', function (d, i) {
                 d3.select(this).transition()
@@ -339,6 +354,8 @@
             .attr('fill', 'black')
             .style('font-size', 16)
             .text("Medal Count by Country");
+
+        await displayTertiaryChart();
     }
 
     async function displaySecondaryChart(data, ind) {
