Updated tertiary chart axis

--- a/index.html
+++ b/index.html
@@ -489,12 +489,12 @@
         canvas.append('g')
             .call(yAxis);
         canvas.append('text')
-            .attr('x', -275)
+            .attr('x', -300)
             .attr('y', -40)
             .attr('transform', 'rotate(-90)')
             .attr('fill', 'black')
             .style('font-size', 16)
-            .text("Event Category");
+            .text("Medals by Event Category");
     }
 
     async function displayTertiaryChart(data, ind) {
